# YonerAI

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_TRUTH.md  Dockerfile  Dockerfile.vps  FULL_TASK_HISTORY.md  LICENSE  LICENSE_JP.md  MIGRATION_GUIDE.md  NOTICE  OPENAI_USAGE.md  ORA_AI_HANDOVER.md  ORA_CHANGELOG.md  ORA_MODEL_MANIFEST.md  ORA_OPTIMIZATION_MANIFEST.md  ORA_SYSTEM_SPEC.md  PRODUCT_NAME  README.md  README_JP.md  SECURITY.md  SELF_EVOLUTION.md  Template_01_Nature.json  Template_02_Future.json  Template_03_Animal.json  Template_04_Realism.json  VERSION  add_context_menu.reg  analyze_cost.py  bad_indent.py  broken_model.py  check_indent.py  check_model_py.bat  check_voicevox_status.py  config.yaml  current_model.py  (+102 more)
clients/cli/: README.md  pyproject.toml
clients/cli/yonerai_cli/: __init__.py  __main__.py  auth_policy.py  cli.py  cli_dispatch.py  cli_parser.py  config.py  first_run.py  install_planner.py  interactive.py  output.py  release_manifest.py  staging_auth_bridge.py  startup_home.py  tui.py
clients/cli/yonerai_cli/commands/: __init__.py  api.py  ask.py  audit.py  auth.py  config.py  diagnostics.py  discord.py  evolve.py  hybrid.py  manifest.py  memory.py  native_run.py  node.py  ops.py  oracle.py  policy.py  project.py  provider.py  providers.py  route.py  runs.py  search.py  status_snapshot.py  sync.py  update.py
clients/cli/yonerai_cli/ime/: __init__.py  local_enhancer.py  privacy.py  romaji_composer.py  romaji_rules.py
clients/cli/yonerai_cli/screens/: __init__.py  agent_console.py  (+25 more)
(+1202 files in other folders)
